Bringing author names back into the activity log and fixing the alignment when a project name is listed.

--- a/sass/page_specific/_activities.sass
+++ b/sass/page_specific/_activities.sass
@@ -10,13 +10,17 @@ div#activity dl
   
 div#activity dt
   padding-left: 24px
+  margin-top: 1em
   a
     font-size: 16px
     float: left
-    padding-right: 13px
+    padding-right: 4px
   span.time
     font-style: italic
     font-size: 10px
+  span.project
+    float: left
+    margin-right: 2px
 div#activity dd 
   margin: 0
   +clearfix
@@ -24,6 +28,4 @@ div#activity dd
   font-size: inherit
   span.description
     font-style: normal
-    margin: 0.547em 0
-  span.author
-    display: none
+    margin: 0.547em 0 0 0
