--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1451,20 +1451,26 @@ div#activity dl {
 /* line 11, ../sass/page_specific/_activities.sass */
 div#activity dt {
   padding-left: 24px;
+  margin-top: 1em;
 }
-/* line 13, ../sass/page_specific/_activities.sass */
+/* line 14, ../sass/page_specific/_activities.sass */
 div#activity dt a {
   font-size: 16px;
   float: left;
-  padding-right: 13px;
+  padding-right: 4px;
 }
-/* line 17, ../sass/page_specific/_activities.sass */
+/* line 18, ../sass/page_specific/_activities.sass */
 div#activity dt span.time {
   font-style: italic;
   font-size: 10px;
 }
+/* line 21, ../sass/page_specific/_activities.sass */
+div#activity dt span.project {
+  float: left;
+  margin-right: 2px;
+}
 
-/* line 20, ../sass/page_specific/_activities.sass */
+/* line 24, ../sass/page_specific/_activities.sass */
 div#activity dd {
   margin: 0;
   overflow: hidden;
@@ -1472,14 +1478,10 @@ div#activity dd {
   padding-left: 0;
   font-size: inherit;
 }
-/* line 25, ../sass/page_specific/_activities.sass */
+/* line 29, ../sass/page_specific/_activities.sass */
 div#activity dd span.description {
   font-style: normal;
-  margin: 0.547em 0;
-}
-/* line 28, ../sass/page_specific/_activities.sass */
-div#activity dd span.author {
-  display: none;
+  margin: 0.547em 0 0 0;
 }
 
 /* line 2, ../sass/page_specific/_boards.sass */
